--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,5 +43,13 @@
         <!-- UI Elements -->
         <color name="icon_tint">#757575</color>
         <color name="divider_color">#E0E0E0</color>
+    <color name="primary_text">#1A1A1A</color>
+    <color name="secondary_text">#666666</color>
+    <color name="hint_text">#999999</color>
+    <color name="card_background">#FFFFFF</color>
+    <color name="stroke_color">#E0E0E0</color>
+    <color name="secondary_button_background">#F8F9FA</color>
+    <color name="image_placeholder">#F5F5F5</color>
+
 
 </resources>
